<resources>
    <string name="app_name">GreenFlagV2</string>
    <string name="password_reqs">Your Password should have a minimum of 8 Characters and contains at least on upper case, lower case, and a number. You can use special characters</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="pick_gender">Pick Gender</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="change_photo">Change Photo</string>
    <string name="age">Age</string>
    <string name="choose_birth_date">Choose Birth Date</string>
    <string name="pick_a_gender">Pick a gender</string>
</resources>