<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMoreInfo"
    android:background="@color/black"
    >

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/password"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_email"
        app:layout_constraintStart_toStartOf="@+id/et_user_email"
        app:layout_constraintTop_toBottomOf="@+id/et_user_email" />

    <ImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="84dp"
        android:layout_height="88dp"

        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_user_name"
        tools:srcCompat="@tools:sample/avatars"
        android:src="@drawable/ic_launcher_background"/>

    <Button
        android:id="@+id/btn_change_profile_pic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="13"
        android:text="@string/change_photo"
        app:layout_constraintEnd_toEndOf="@+id/et_user_password"
        app:layout_constraintStart_toStartOf="@+id/et_user_password"
        app:layout_constraintTop_toBottomOf="@+id/et_user_password" />

    <EditText
        android:id="@+id/et_user_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/age"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_user_password"
        app:layout_constraintStart_toStartOf="@+id/et_user_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_profile_pic" />

    <Button
        android:id="@+id/btn_user_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="13"
        android:text="@string/choose_birth_date"
        app:layout_constraintEnd_toEndOf="@+id/et_user_age"
        app:layout_constraintStart_toStartOf="@+id/et_user_age"
        app:layout_constraintTop_toBottomOf="@+id/et_user_age" />

    <EditText
        android:id="@+id/et_user_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pick_a_gender"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_user_birth_date"
        app:layout_constraintStart_toStartOf="@+id/btn_user_birth_date"
        app:layout_constraintTop_toBottomOf="@+id/btn_user_birth_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/pick_gender"
        app:layout_constraintTop_toBottomOf="@+id/et_user_gender"
        app:layout_constraintStart_toStartOf="@+id/et_user_gender"
        android:id="@+id/tv_gender"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"

        app:layout_constraintBottom_toTopOf="@+id/et_country"
        app:layout_constraintEnd_toEndOf="@+id/et_user_gender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_gender"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender">

        <RadioButton
            android:id="@+id/rbtn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="472dp" />

        <RadioButton
            android:id="@+id/rbtn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="472dp" />

        <RadioButton
            android:id="@+id/rbtn_ns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Specified"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="472dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Postal Address (OPT)"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rg_gender"
        app:layout_constraintStart_toStartOf="@+id/rg_gender"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"

        app:layout_constraintBottom_toBottomOf="@+id/et_country"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile_pic" />




</androidx.constraintlayout.widget.ConstraintLayout>